[tool.poetry]
name = "beombong"
version = "0.1.0"
description = "빗썸 자동매매 MVP를 위한 기본 모듈과 HTTP 클라이언트"
authors = ["Beombong Maintainers <maintainers@beombong.local>"]
readme = "README.md"
packages = [
    { include = "beombong", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
respx = "^0.20.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

